SDKs/twilio.com/twilio_flex_v1/1.37.3/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()
    
req = operations.CreateChannelRequest(
    security=operations.CreateChannelSecurity(
        account_sid_auth_token=shared.SchemeAccountSidAuthToken(
            password="YOUR_PASSWORD_HERE",
            username="YOUR_USERNAME_HERE",
        ),
    ),
    request=operations.CreateChannelCreateChannelRequest(
        chat_friendly_name="aut",
        chat_unique_name="harum",
        chat_user_friendly_name="quod",
        flex_flow_sid="quaerat",
        identity="quis",
        long_lived=False,
        pre_engagement_data="laborum",
        target="ea",
        task_attributes="non",
        task_sid="aut",
    ),
)
    
res = s.sdk.create_channel(req)

if res.flex_v1_channel is not None:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `create_channel`
* `create_flex_flow`
* `create_gooddata` - To create a GoodData Session id to access GoodData dashboards
* `create_interaction` - Create a new Interaction.
* `create_interaction_channel_invite` - Invite an Agent or a TaskQueue to a Channel.
* `create_interaction_channel_participant` - Add a Participant to a Channel.
* `create_web_channel`
* `delete_channel`
* `delete_flex_flow`
* `delete_web_channel`
* `fetch_channel`
* `fetch_configuration`
* `fetch_flex_flow`
* `fetch_interaction`
* `fetch_interaction_channel` - Fetch a Channel for an Interaction.
* `fetch_user_roles` - This is used by Flex UI and Quality Management to fetch the Flex Insights roles for the user
* `fetch_web_channel`
* `list_channel`
* `list_flex_flow`
* `list_interaction_channel` - List all Channels for an Interaction.
* `list_interaction_channel_invite` - List all Invites for a Channel.
* `list_interaction_channel_participant` - List all Participants for a Channel.
* `list_web_channel`
* `update_flex_flow`
* `update_interaction_channel` - Update an existing Interaction Channel.
* `update_interaction_channel_participant` - Update an existing Channel Participant.
* `update_web_channel`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
